--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>The Ball Game</h1>
-    <div class="ball" onclick="onBallClick()">100</div>
+    <div class="ball" onclick="onBallClick(this)">100</div>
 
 
     <script src="main.js"></script>
