Change randomly ball size

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="ball" onclick="onBallClick(this)">100</div>
 
 
+    <script src="util.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
